<resources>
    <string name="app_name">005_GridLayout</string>
    <string name="button_1">BUTTON 1</string>
    <string name="button_2">BUTTON 2</string>
    <string name="button_3">BUTTON 3</string>
    <string name="button_4">BUTTON 4</string>
    <string name="button_5">BUTTON 5</string>
    <string name="button_6">BUTTON 6</string>
    <string name="button_7">BUTTON 7</string>
    <string name="button_8">BUTTON 8</string>
    <string name="button_9">BUTTON 9</string>
</resources>
